[gd_scene load_steps=5 format=3 uid="uid://epiepvqbaohp"]

[ext_resource type="Script" path="res://scenes/settings/settings.gd" id="1"]
[ext_resource type="FontFile" path="res://assets/fonts/pt_sans_24pt.tres" id="2"]
[ext_resource type="FontFile" path="res://assets/fonts/pt_sans_16pt.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://cl5tib1bkrtpc" path="res://scenes/settings/settings_map_dialog.tscn" id="4_6ibf8"]

[node name="Settings" type="Popup"]
process_mode = 2
title = "Input mapping"
size = Vector2i(601, 285)
visible = true
borderless = false
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Input" type="Label" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Input"

[node name="Mapped" type="Label" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Mapped"

[node name="Range" type="Label" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(201, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Range"

[node name="Steering" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/Steering"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Steering"

[node name="Mapped" type="Label" parent="MarginContainer/VBoxContainer/Steering"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Device X: Axis: Y"

[node name="Map" type="Button" parent="MarginContainer/VBoxContainer/Steering"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Map"

[node name="Throttle" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Throttle"

[node name="Mapped" type="Label" parent="MarginContainer/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Device X: Axis: Y"

[node name="Mode" type="OptionButton" parent="MarginContainer/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(126, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")

[node name="Invert" type="CheckBox" parent="MarginContainer/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(71, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Invert"

[node name="Map" type="Button" parent="MarginContainer/VBoxContainer/Throttle"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Map"

[node name="Brake" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/Brake"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Brake	"

[node name="Mapped" type="Label" parent="MarginContainer/VBoxContainer/Brake"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Device X: Axis: Y"

[node name="Mode" type="OptionButton" parent="MarginContainer/VBoxContainer/Brake"]
custom_minimum_size = Vector2(126, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")

[node name="Invert" type="CheckBox" parent="MarginContainer/VBoxContainer/Brake"]
custom_minimum_size = Vector2(71, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Invert"

[node name="Map" type="Button" parent="MarginContainer/VBoxContainer/Brake"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Map"

[node name="GearUp" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/GearUp"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Gear up"

[node name="Mapped" type="Label" parent="MarginContainer/VBoxContainer/GearUp"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Device X: Button: Y"

[node name="Map" type="Button" parent="MarginContainer/VBoxContainer/GearUp"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Map"

[node name="GearDown" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/GearDown"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Gear down"

[node name="Mapped" type="Label" parent="MarginContainer/VBoxContainer/GearDown"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Device X: Button: Y"

[node name="Map" type="Button" parent="MarginContainer/VBoxContainer/GearDown"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Map"

[node name="MapDialog" parent="." instance=ExtResource("4_6ibf8")]
visible = false

[connection signal="about_to_popup" from="." to="." method="_on_Settings_about_to_show"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="popup_hide" from="." to="." method="_on_Settings_popup_hide"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Steering/Map" to="." method="_on_Steering_Map_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Throttle/Mode" to="." method="_on_Throttle_Mode_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Throttle/Invert" to="." method="_on_Throttle_Invert_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Throttle/Map" to="." method="_on_Throttle_Map_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Brake/Mode" to="." method="_on_Brake_Mode_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Brake/Invert" to="." method="_on_Brake_Invert_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Brake/Map" to="." method="_on_Brake_Map_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GearUp/Map" to="." method="_on_GearUp_Map_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GearDown/Map" to="." method="_on_GearDown_Map_pressed"]
[connection signal="mapping_changed" from="MapDialog" to="." method="_on_map_dialog_mapping_changed"]
